--- a/src/Makefile
+++ b/src/Makefile
@@ -21,7 +21,7 @@ CU_SRCS = cuda/cuda_my_acceleration.cu
 OBJS = $(CU_SRCS:.cu=.o) $(CXX_SRCS:.cpp=.o)
 
 # Executable name
-EXEC = nbodyplus.exe
+EXEC = nbodyplus_binary.exe
 
 # Main target
 all: $(EXEC)
