Batch update in GPU

--- a/src/Makefile
+++ b/src/Makefile
@@ -10,7 +10,7 @@ NVCCFLAGS = -O2 --std=c++11 -G -Xcompiler -rdynamic -g -lineinfo -Xptxas=-v -lcu
 #NVCC_FLAGS_PROFILE = -g -lineinfo
 
 # Libraries
-LDFLAGS = -L/usr/local/cuda-11.8/lib64/ -lcudart -lcublas
+LDFLAGS = -L/usr/local/cuda-11.8/lib64/ -lcudart -lcublas -lnvToolsExt
 #add -lnvToolsExt for <nvToolsExt.h>
 #LDFLAGS = -L/mnt/sw/nix/store/zi2wc26znf75csf5hhz77p0d2bbz53ih-cuda-11.8.0/lib64/ -lcudart
 
